# C-Pathtracer

./: CMakeLists.txt  main.c
Rendering/: image.c  image.h  renderer.c  renderer.h
Rendering/Structs/: Point.c  Point.h  RGB.h  Ray.h  Sphere.c  Sphere.h  camera.c  camera.h  halton.c
